--- a/src/main/resources/View/manager.fxml
+++ b/src/main/resources/View/manager.fxml
@@ -35,25 +35,25 @@
             <Avatar fx:id="ava" accessibleRole="IMAGE_VIEW" layoutX="1413.0" layoutY="14.0" />
             <Button fx:id="homeBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="782.0" layoutY="1.0" mnemonicParsing="false" onAction="#anchorHomeappear" styleClass="switch-btn" text="Home">
                <font>
-                  <Font size="28.0" />
+                  <Font name="Inter Regular" size="28.0" />
                </font>
             </Button>
             <Button fx:id="productBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="901.0" layoutY="3.0" mnemonicParsing="false" styleClass="switch-btn" text="Product">
                <font>
-                  <Font size="26.0" />
+                  <Font name="Inter Regular" size="26.0" />
                </font>
             </Button>
             <Button fx:id="staffBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1031.0" layoutY="3.0" mnemonicParsing="false" onAction="#anchorStaffappear" styleClass="switch-btn" text="Staff">
                <font>
-                  <Font size="26.0" />
+                  <Font name="Inter Regular" size="26.0" />
                </font>
             </Button>
             <Button fx:id="billBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1130.0" layoutY="3.0" mnemonicParsing="false" onAction="#anchorBillappear" styleClass="switch-btn" text="Bill">
                <font>
-                  <Font size="26.0" />
+                  <Font name="Inter Regular" size="26.0" />
                </font>
             </Button>
-            <Pane layoutX="789.0" layoutY="44.0" prefHeight="6.0" prefWidth="96.0" style="-fx-background-radius: 10;" styleClass="switch-pane" />
+            <Pane layoutX="793.0" layoutY="44.0" prefHeight="6.0" prefWidth="96.0" style="-fx-background-radius: 10;" styleClass="switch-pane" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="anchorHome" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0">
