--- a/src/main/resources/View/hello-view.fxml
+++ b/src/main/resources/View/hello-view.fxml
@@ -40,7 +40,7 @@
                         <Font name="Inter Medium" size="20.0" />
                     </font>
                 </Label>
-                <TextField fx:id="log_account" layoutX="98.0" layoutY="383.0" prefHeight="54.0" prefWidth="565.0" promptText="Email or user name" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
+                <TextField fx:id="log_account" layoutX="98.0" layoutY="383.0" prefHeight="54.0" prefWidth="565.0" promptText="Email " style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
                <font>
                   <Font name="Inter Regular" size="19.0" />
                </font></TextField>
@@ -84,7 +84,7 @@
                           <Font name="Inter Medium" size="20.0" />
                       </font>
                   </Label>
-                  <TextField fx:id="sign_account" layoutX="79.0" layoutY="381.0" prefHeight="54.0" prefWidth="565.0" promptText="Email or user name" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
+                  <TextField fx:id="sign_account" layoutX="79.0" layoutY="381.0" prefHeight="54.0" prefWidth="565.0" promptText="Email" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
                <font>
                   <Font name="Inter Regular" size="19.0" />
                </font></TextField>
