--- a/src/main/resources/View/Staff.fxml
+++ b/src/main/resources/View/Staff.fxml
@@ -2,6 +2,8 @@
 
 <?import com.gluonhq.charm.glisten.control.Avatar?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -12,7 +14,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane prefHeight="982.0" prefWidth="1512.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Staff">
    <children>
@@ -79,72 +80,182 @@
       </AnchorPane>
       <AnchorPane layoutY="62.0" prefHeight="919.0" prefWidth="1522.0">
          <children>
-            <Label layoutX="25.0" layoutY="15.0" text="Staff Information">
+            <Label layoutX="25.0" layoutY="15.0" text="STAFF INFORMATION">
                <font>
                   <Font name="Inter Bold" size="36.0" />
                </font>
             </Label>
-            <Line endX="967.333251953125" endY="-7.62939453125E-6" layoutX="458.0" layoutY="37.0" startX="-100.0" />
-            <VBox layoutX="25.0" layoutY="90.0" prefHeight="100.0" prefWidth="600.0">
+            <Line endX="967.333251953125" endY="-7.62939453125E-6" layoutX="458.0" layoutY="37.0" startX="-10.666656494140625" startY="-7.62939453125E-6" />
+            <VBox layoutX="25.0" layoutY="90.0" prefHeight="137.0" prefWidth="631.0">
                <children>
                   <Label text="Staff ID">
                      <font>
-                        <Font name="Inter SemiBold" size="24.0" />
+                        <Font name="Inter SemiBold" size="36.0" />
                      </font>
                   </Label>
-                  <TextField prefHeight="49.0" prefWidth="288.0" />
+                  <TextField prefHeight="75.0" prefWidth="631.0" />
                </children>
             </VBox>
-            <VBox layoutX="25.0" layoutY="200.0" prefHeight="100.0" prefWidth="600.0">
+            <VBox layoutX="25.0" layoutY="248.0" prefHeight="137.0" prefWidth="631.0">
                <children>
-                  <Label text="Staff ID">
+                  <Label text="Phone Number">
                      <font>
-                        <Font name="Inter SemiBold" size="24.0" />
+                        <Font name="Inter SemiBold" size="36.0" />
                      </font>
                   </Label>
-                  <TextField prefHeight="49.0" prefWidth="288.0" />
+                  <TextField prefHeight="75.0" prefWidth="631.0" />
                </children>
             </VBox>
-            <VBox layoutX="25.0" layoutY="310.0" prefHeight="100.0" prefWidth="600.0">
+            <VBox layoutX="25.0" layoutY="435.0" prefHeight="137.0" prefWidth="631.0">
                <children>
-                  <Label text="Staff ID">
+                  <Label text="Email">
                      <font>
-                        <Font name="Inter SemiBold" size="24.0" />
+                        <Font name="Inter SemiBold" size="36.0" />
                      </font>
                   </Label>
-                  <TextField prefHeight="49.0" prefWidth="288.0" />
+                  <TextField prefHeight="75.0" prefWidth="631.0" />
                </children>
             </VBox>
-            <VBox layoutX="690.0" layoutY="90.0" prefHeight="100.0" prefWidth="600.0">
+            <VBox layoutX="761.0" layoutY="90.0" prefHeight="137.0" prefWidth="631.0">
                <children>
-                  <Label text="Staff ID">
+                  <Label text="Name">
                      <font>
-                        <Font name="Inter SemiBold" size="24.0" />
+                        <Font name="Inter SemiBold" size="36.0" />
                      </font>
                   </Label>
-                  <TextField prefHeight="49.0" prefWidth="288.0" />
+                  <TextField prefHeight="75.0" prefWidth="631.0" />
                </children>
             </VBox>
-            <VBox layoutX="690.0" layoutY="200.0" prefHeight="100.0" prefWidth="600.0">
+            <VBox layoutX="761.0" layoutY="248.0" prefHeight="137.0" prefWidth="631.0">
                <children>
-                  <Label text="Staff ID">
+                  <Label text="Address">
                      <font>
-                        <Font name="Inter SemiBold" size="24.0" />
+                        <Font name="Inter SemiBold" size="36.0" />
                      </font>
                   </Label>
-                  <TextField prefHeight="49.0" prefWidth="288.0" />
+                  <TextField prefHeight="75.0" prefWidth="631.0" />
                </children>
             </VBox>
-            <VBox layoutX="690.0" layoutY="310.0" prefHeight="100.0" prefWidth="600.0">
+            <VBox layoutX="761.0" layoutY="435.0" prefHeight="137.0" prefWidth="631.0">
                <children>
-                  <Label text="Staff ID">
+                  <Label text="Password">
                      <font>
-                        <Font name="Inter SemiBold" size="24.0" />
+                        <Font name="Inter SemiBold" size="36.0" />
                      </font>
                   </Label>
-                  <TextField prefHeight="49.0" prefWidth="288.0" />
+                  <TextField prefHeight="75.0" prefWidth="631.0" />
                </children>
             </VBox>
+            <Button layoutX="1288.0" layoutY="500.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="54.0" text="Set">
+               <font>
+                  <Font name="Inter Bold" size="18.0" />
+               </font>
+            </Button>
+            <Button layoutX="1241.0" layoutY="664.0" mnemonicParsing="false" prefHeight="73.0" prefWidth="147.0" text="Save">
+               <font>
+                  <Font name="Inter Bold" size="24.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutY="63.0" prefHeight="919.0" prefWidth="1522.0" visible="false">
+         <children>
+            <Label layoutX="25.0" layoutY="15.0" text="SET PASSWORD">
+               <font>
+                  <Font name="Inter Bold" size="36.0" />
+               </font>
+            </Label>
+            <Line endX="852.3333740234375" endY="-7.62939453125E-6" layoutX="475.0" layoutY="37.0" startX="-100.0" />
+            <VBox layoutX="75.0" layoutY="85.0" prefHeight="200.0" prefWidth="1183.0">
+               <children>
+                  <Label text="Current Password">
+                     <font>
+                        <Font name="Inter Bold" size="32.0" />
+                     </font>
+                  </Label>
+                  <TextField prefHeight="86.0" prefWidth="1183.0" />
+               </children>
+            </VBox>
+            <VBox layoutX="75.0" layoutY="260.0" prefHeight="200.0" prefWidth="1183.0">
+               <children>
+                  <Label text="New Password">
+                     <font>
+                        <Font name="Inter Bold" size="32.0" />
+                     </font>
+                  </Label>
+                  <TextField prefHeight="86.0" prefWidth="1183.0" />
+               </children>
+            </VBox>
+            <VBox layoutX="75.0" layoutY="435.0" prefHeight="200.0" prefWidth="1183.0">
+               <children>
+                  <Label text="Confirm Password">
+                     <font>
+                        <Font name="Inter Bold" size="32.0" />
+                     </font>
+                  </Label>
+                  <TextField prefHeight="86.0" prefWidth="1183.0" />
+               </children>
+            </VBox>
+            <Button layoutX="1094.0" layoutY="665.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="163.0" text="Save">
+               <font>
+                  <Font name="Inter Bold" size="24.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutY="73.0" prefHeight="909.0" prefWidth="1522.0" visible="false">
+         <children>
+            <Label layoutX="25.0" layoutY="15.0" text="CUSTOMER">
+               <font>
+                  <Font name="Inter Bold" size="36.0" />
+               </font>
+            </Label>
+            <Line endX="1071.0" endY="-7.62939453125E-6" layoutX="365.0" layoutY="37.0" startX="-100.0" />
+            <VBox layoutX="25.0" layoutY="90.0" prefHeight="111.0" prefWidth="1411.0">
+               <children>
+                  <Label text="Customer Name">
+                     <font>
+                        <Font name="Inter Bold" size="36.0" />
+                     </font>
+                  </Label>
+                  <TextField prefHeight="55.0" prefWidth="1411.0" />
+               </children>
+            </VBox>
+            <VBox layoutX="25.0" layoutY="240.0" prefHeight="111.0" prefWidth="640.0">
+               <children>
+                  <Label text="Customer Name">
+                     <font>
+                        <Font name="Inter Bold" size="36.0" />
+                     </font>
+                  </Label>
+                  <DatePicker prefHeight="55.0" prefWidth="627.0" />
+               </children>
+            </VBox>
+            <VBox layoutX="797.0" layoutY="240.0" prefHeight="111.0" prefWidth="640.0">
+               <children>
+                  <Label text="Customer Gender">
+                     <font>
+                        <Font name="Inter Bold" size="36.0" />
+                     </font>
+                  </Label>
+                  <ComboBox prefHeight="55.0" prefWidth="618.0" />
+               </children>
+            </VBox>
+            <VBox layoutX="25.0" layoutY="390.0" prefHeight="111.0" prefWidth="1411.0">
+               <children>
+                  <Label text="Customer Name">
+                     <font>
+                        <Font name="Inter Bold" size="36.0" />
+                     </font>
+                  </Label>
+                  <TextField prefHeight="55.0" prefWidth="1411.0" />
+               </children>
+            </VBox>
+            <Button layoutX="1237.0" layoutY="569.0" mnemonicParsing="false" prefHeight="73.0" prefWidth="199.0" text="Next">
+               <font>
+                  <Font name="Inter Bold" size="36.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </children>
