--- a/src/main/resources/View/manager.fxml
+++ b/src/main/resources/View/manager.fxml
@@ -13,14 +13,17 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="982.0" prefWidth="1512.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.managerController">
    <children>
       <AnchorPane prefHeight="983.0" prefWidth="1516.0" styleClass="main-background" />
-      <AnchorPane prefHeight="63.0" prefWidth="1512.0" styleClass="navbar">
+      <AnchorPane prefHeight="70.0" prefWidth="1512.0" styleClass="navbar">
          <children>
             <ImageView fitHeight="54.0" fitWidth="161.0" layoutX="11.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -33,27 +36,27 @@
                   <Font name="Inter SemiBold" size="19.0" />
                </font></Label>
             <Avatar fx:id="ava" accessibleRole="IMAGE_VIEW" layoutX="1413.0" layoutY="12.0" />
-            <Button fx:id="homeBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="782.0" layoutY="4.0" mnemonicParsing="false" onAction="#anchorHomeappear" prefWidth="109.0" styleClass="selected-btn" text="Home">
+            <Button fx:id="productBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="719.0" layoutY="2.0" mnemonicParsing="false" onAction="#anchorProductappear" prefHeight="54.0" prefWidth="152.0" styleClass="switch-btn" text="Product">
                <font>
-                  <Font size="28.0" />
+                  <Font name="Inter ExtraBold" size="28.0" />
                </font>
             </Button>
-            <Button fx:id="productBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="901.0" layoutY="4.0" mnemonicParsing="false" onAction="#anchorProductappear" prefWidth="121.0" styleClass="switch-btn" text="Product">
+            <Button fx:id="staffBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="916.0" layoutY="2.0" mnemonicParsing="false" onAction="#anchorStaffappear" prefHeight="54.0" prefWidth="110.0" styleClass="switch-btn" text="Staff">
                <font>
-                  <Font size="26.0" />
+                  <Font name="Inter ExtraBold" size="28.0" />
                </font>
             </Button>
-            <Button fx:id="staffBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1031.0" layoutY="4.0" mnemonicParsing="false" onAction="#anchorStaffappear" prefWidth="88.0" styleClass="switch-btn" text="Staff">
+            <Button fx:id="billBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1111.0" layoutY="2.0" mnemonicParsing="false" onAction="#anchorBillappear" prefHeight="50.0" prefWidth="80.0" styleClass="switch-btn" text="Bill">
                <font>
-                  <Font size="26.0" />
+                  <Font name="Inter ExtraBold" size="28.0" />
                </font>
             </Button>
-            <Button fx:id="billBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1130.0" layoutY="4.0" mnemonicParsing="false" onAction="#anchorBillappear" prefWidth="70.0" styleClass="switch-btn" text="Bill">
+            <Pane fx:id="switch_pane" layoutX="526.0" layoutY="47.0" prefHeight="6.0" prefWidth="119.0" style="-fx-background-radius: 10;" styleClass="switch-pane" />
+            <Button fx:id="homeBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="525.0" layoutY="5.0" mnemonicParsing="false" onAction="#anchorHomeappear" prefHeight="54.0" prefWidth="119.0" styleClass="switch-btn" text="Home">
                <font>
-                  <Font size="26.0" />
+                  <Font name="Inter ExtraBold" size="28.0" />
                </font>
             </Button>
-            <Pane fx:id="switch_pane" layoutX="783.0" layoutY="48.0" prefHeight="6.0" prefWidth="109.0" style="-fx-background-radius: 10;" styleClass="switch-pane" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="anchorHome" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0">
@@ -195,7 +198,22 @@
                   <Font name="Inter Bold" size="36.0" />
                </font>
             </Label>
-            <Line endX="1063.333251953125" layoutX="380.0" layoutY="37.0" startX="-100.0" />
+            <Line endX="1063.333251953125" layoutX="380.0" layoutY="37.0" startX="-100.0" strokeWidth="3.0" styleClass="line-color" />
+            <GridPane fx:id="gridCardPane" layoutX="125.0" layoutY="117.0" prefHeight="706.0" prefWidth="1286.0">
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
          </children>
       </AnchorPane>
    </children>
