--- a/src/main/resources/View/manager.fxml
+++ b/src/main/resources/View/manager.fxml
@@ -59,7 +59,7 @@
             </Button>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="anchorHome" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0" visible="false">
+      <AnchorPane fx:id="anchorHome" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0">
          <children>
             <DatePicker layoutX="32.0" layoutY="46.0" prefHeight="43.0" prefWidth="704.0" />
             <BarChart layoutX="14.0" layoutY="115.0" prefHeight="689.0" prefWidth="1478.0">
@@ -72,7 +72,7 @@
             </BarChart>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="anchorStaff" layoutX="-14.0" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0">
+      <AnchorPane fx:id="anchorStaff" layoutX="-14.0" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0" visible="false">
          <children>
             <Label layoutX="43.0" layoutY="15.0" text="STAFF INFORMATION">
                <font>
@@ -174,24 +174,15 @@
                </font>
             </Label>
             <Line endX="1068.0" endY="-7.62939453125E-6" layoutX="412.0" layoutY="37.0" startX="-50.049072265625" startY="-1.52587890625E-5" strokeWidth="3.0" styleClass="line-color" />
-            <TableView layoutX="25.0" layoutY="68.0" prefHeight="360.0" prefWidth="1430.0">
-              <columns>
-                <TableColumn prefWidth="75.0" text="C1" />
-                <TableColumn prefWidth="75.0" text="C2" />
-              </columns>
-            </TableView>
+            <TableView fx:id="table_productDetail" layoutX="25.0" layoutY="68.0" prefHeight="360.0" prefWidth="1430.0" />
             <Label layoutX="25.0" layoutY="450.0" text="BILL LIST">
                <font>
                   <Font name="Inter Bold" size="36.0" />
                </font>
             </Label>
-            <TableView layoutX="25.0" layoutY="501.0" prefHeight="360.0" prefWidth="1430.0">
-              <columns>
-                <TableColumn prefWidth="75.0" text="C1" />
-                <TableColumn prefWidth="75.0" text="C2" />
-              </columns>
-            </TableView>
+            <TableView fx:id="table_billList" layoutX="25.0" layoutY="503.0" prefHeight="360.0" prefWidth="1430.0" />
             <Line endX="1170.89599609375" layoutX="303.0" layoutY="473.0" startX="-101.0706787109375" strokeWidth="3.0" styleClass="line-color" />
+            <Button layoutX="173.0" layoutY="864.0" mnemonicParsing="false" onAction="#addProductDetail" prefHeight="43.0" prefWidth="87.0" text="See Detail" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="getAnchorProduct" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0" visible="false">
