--- a/src/main/resources/View/manager.fxml
+++ b/src/main/resources/View/manager.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -59,7 +60,7 @@
             </Button>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="anchorHome" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0">
+      <AnchorPane fx:id="anchorHome" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0" visible="false">
          <children>
             <DatePicker layoutX="32.0" layoutY="46.0" prefHeight="43.0" prefWidth="704.0" />
             <BarChart layoutX="14.0" layoutY="115.0" prefHeight="689.0" prefWidth="1478.0">
@@ -72,7 +73,7 @@
             </BarChart>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="anchorStaff" layoutX="-14.0" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0" visible="false">
+      <AnchorPane fx:id="anchorStaff" layoutX="-14.0" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0">
          <children>
             <Label layoutX="43.0" layoutY="15.0" text="STAFF INFORMATION">
                <font>
@@ -121,10 +122,6 @@
                   <Font name="Inter SemiBold" size="28.0" />
                </font>
             </Label>
-            <TextField fx:id="staffpasswordTextfield" layoutX="964.0" layoutY="180.0" prefHeight="35.0" prefWidth="521.0" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
-               <font>
-                  <Font name="Inter Medium" size="22.0" />
-               </font></TextField>
             <Label layoutX="752.0" layoutY="277.0" text="Phone Number:">
                <font>
                   <Font name="Inter SemiBold" size="28.0" />
@@ -164,6 +161,7 @@
                </font>
             </Label>
             <Line endX="691.30078125" endY="-3.0517578125E-5" layoutX="368.0" layoutY="364.0" startX="-98.8504638671875" startY="-3.0517578125E-5" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="3.0" styleClass="line-color" />
+            <PasswordField fx:id="staffpasswordTextfield" layoutX="964.0" layoutY="180.0" prefHeight="45.0" prefWidth="521.0" style="-fx-background-radius: 10; -fx-border-radius: 10;" styleClass="txtfd" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="anchorBill" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0" visible="false">
